[tool.poetry]
name = "powa"
version = "0.0.1"
description = "POWA Daemon"
authors = ["Julian Nicolas Rodriguez  <junirodriguezz1@gmail.com>"]
packages = [{ include = "src/powa" }]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.scripts]
powa = "powa.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
