[project]
name = "powa"
dynamic = []
description = "POwer WArden Daemon"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
authors = [ { name = "Julian Nicolas Rodriguez", email = "junirodriguezz1@gmail.com" } ]
keywords = ["powa", "daemon", "power management", "energy", "monitoring"]
dependencies = [
    "pyyaml>=6.0",
    "smbus2==0.5.0",
    "aiohttp==3.12.13",
]

[tool.poetry]
version = "0.0.0"

[project.urls]
repository = "https://github.com/marifante/powa"

[project.scripts]
powa = "powa.cli:main"

[tool.poetry.plugins."poetry.plugin"]
dynamic-version = "poetry_dynamic_version.plugin"

[tools.poetry-dynamic-versioning.substitution]
folders = [ { path = "src"} ]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[tool.group.dev.dependencies]
tox = "^4.0"
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
poetry-dynamic-versioning = "^0.21.3"
